# multippl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AdventOfCode.lean  BddIS.lean  Cargo.toml  README.org  ZENODO.org  binding.gyp  buildit  devshell.toml  flake.nix  package.json
core/: Cargo.toml
core/.bin/: grids.sh  l1.sh  l1observes.sh
core/benches/: grids.rs
core/plots/: grids.rs  grids.sh
core/plots/grids/: csv.rs  data.rs  generate.rs  mod.rs
core/plots/grids/tasks/: duration.rs  variance.rs
core/reference/: grid3x3.dice  ite.dice
core/src/: analysis.rs  analysis2.rs  annotate.rs  collect_weightmap.rs  compile.rs  debug.rs  grammar.rs  grammar_macros.rs  inference.rs  interactions.rs  lib.rs  parser.rs  pipeline.rs  render.rs  tests.rs  typecheck.rs  typeinf.rs  uniquify.rs  utils.rs
core/src/analysis/: dependencies.rs  hypergraph.rs  mod.rs  sampling.rs
core/src/compile/: anf.rs  compiled.rs  context.rs  errors.rs  eval.rs  exact.rs  grammar.rs  importance.rs  mod.rs  weighting.rs
core/src/data/: context.rs  expectations.rs  importance.rs  mod.rs  output.rs  wmcstats.rs
core/src/grids/: generate.rs  mod.rs  tests.rs
core/src/inference/: debug.rs  importance_weighting.rs  iters.rs
core/src/tests/: arbitrary.rs  grids.rs  mod.rs
core/src/utils/: mod.rs
formula/: Cargo.toml
formula/src/: lib.rs  main.rs
hs/: CHANGELOG.md  flake.nix  yodel.cabal
hs/exe/: Exact.hs
hs/src/: MLS.hs  MyLib.hs
hs/src/Control/Monad/: Meas.hs  Weighted.hs
hs/src/Grammar/: Exact.hs  Sample.hs
tree-sitter/: Cargo.toml  binding.gyp  grammar.js
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/src/: grammar.json  node-types.json  parser.c
tree-sitter/test/corpus/: ex1.txt
yodel/: Cargo.toml  clippy.toml
yodel/.bin/: clean_csvs  grids.sh  l1.sh  l1observes.sh
yodel/bench/: README.org  avg.awk  avg.py  avg.sh  bench.py  l1-g3x3.sh  l1-g9x9.sh  run.py  run.sh  runall.sh  tabulate.py  time.sh  util.py
yodel/bench.pre-oopsla-directsamplers/discrete-gaussian-15/: main.py
yodel/bench.pre-oopsla-directsamplers/discrete-gaussian-31/: main.yo
yodel/bench.pre-oopsla-directsamplers/discrete-gaussian-63/: main.py  main.yo  network63.dice
yodel/bench.pre-oopsla-directsamplers/ring/r8/: diag.yo  (+2 more)
yodel/bench.pre-oopsla/discrete-gaussian-15/: main.yo
yodel/bench.pre-oopsla/discrete-gaussian-31/: main.py  network31.dice
yodel/bench.pre-oopsla/insurance/: insurance.dice  main.py  main.yo  small.dice
yodel/bench.pre-profiling-2024-03-04/: awktruthy.sh  l1.sh  run.py
yodel/bench.pre-profiling-2024-03-04/GMM-discrete/: data.json  generate.py
yodel/bench.pre-profiling-2024-03-04/GMM-discrete-dynamic/: l1.sh  main.yo
yodel/bench.pre-profiling-2024-03-04/beta-bernoulli/: main.py  main.yo
yodel/bench.pre-profiling-2024-03-04/dbn/: generate.py
yodel/bench.pre-profiling-2024-03-04/discrete-continuous/: generate.py  l1.sh  main.py
yodel/bench.pre-profiling-2024-03-04/grids/: utils.py
yodel/bench.pre-profiling-2024-03-04/hmm/: generate.py  hmm0.0.pt  main.py  main.yo
yodel/bench.pre-profiling-2024-03-04/hmm-60/: data.json  data.json.1000  generate.py  main.py
yodel/bench.pre-profiling-2024-03-04/hybrid0/: data.json  main.psi
yodel/bench.pre-profiling-2024-03-04/hybridCD/: data.json  main.py  main.yo  utils.py
yodel/bench/GMM-discrete/: main.py
yodel/bench/GMM-discrete-dynamic/: data.json  generate.py  main.py
yodel/bench/arrival/: run.sh
yodel/bench/bayesnets/: run.sh
yodel/bench/beta-bernoulli/: data.json  generate.py  main.py
yodel/bench/discrete-continuous/: data.json  main.py  main.yo
yodel/bench/gossip/: truth.hs
yodel/bench/grids/: grids3x3.py  grids6x6-sampled.yo  grids6x6.py  grids6x6.yo  grids9x9.py  utils.py  utils.py.old  yodel.py
yodel/bench/hmm/: data.json  generate.py  main.py  main.yo
yodel/bench/hmm-60/: hmm0.0.pt  main.yo
yodel/bench/hybrid0/: data.json  generate.py  hybrid0.py  main.py  main.yo
yodel/bench/hybridCD/: data.json  generate.py  main.psi  main.py  main.yo
yodel/examples/: .gitignore  README.org  arrival.py  arrival.yo  arrival3x3.yo  arrival6x6-bork.yo  arrival6x6.yo  arrival9x9.yo  even.yo  gossip-g3-exact.yo  gossip-g3.psi  grids2x2.yo  grids3x3-sampled.yo  grids3x3.py  grids9x9-sampled.yo  hmm0.data.json  hmm0.yo  hybrid.0.generate.py  hybrid.0.py  hybrid.0.yo  hybrid0.data.json  mkgrid.py  run-grids.sh  run.sh  tiny.yo  tiny1.yo  tiny2.yo  tiny3.yo
yodel/examples/questions/: if.dice  if.yo  if_sampled.yo  obs.dice  obs_sampled.yo
yodel/examples/reference/: ite.dice  test.dice  test2.dice  test3.dice
yodel/examples/shed/: clgaussian.test.exact.yo  clgaussian.test.yo  clgaussian.test.yo.1  tiny-data.json  tiny-data.yo  tiny-inline.yo  tiny-inline2.yo  tiny.yo  tiny1.yo  tiny2.yo  tiny3.yo  tiny4.yo  tiny5.yo
yodel/exe/: main.rs
yodel/plots/bns/: mod.rs
yodel/plots/grids/: csv_rw.rs
yodel/reference/: ite_with_observe.dice
yodel/src/: annotate.rs  desugar.rs  desugar_exact.rs  desugar_sample.rs  grammar.rs  grammar_macros.rs  lib.rs  main.rs  parser.rs  pipeline.rs  typecheck.rs  typeinf.rs  uniquify.rs  upcast.rs
yodel/src/analysis/: dependencies.rs  hypergraph.rs  mod.rs  sampling.rs
yodel/src/bayesian_network/: compile.rs  diagnostics.rs  mod.rs
yodel/src/compile/: anf.rs  eval.rs  grammar.rs  mod.rs  sample.rs  sampling.rs
yodel/src/data/: context.rs  errors.rs  expectations.rs  importance.rs  mod.rs  output.rs  weight.rs
yodel/src/desugar/: exact.rs  mod.rs  sample.rs
yodel/src/grammar/: anf.rs  classes.rs  core.rs  exact.rs  function.rs  macros.rs  mod.rs  program.rs  sampling.rs  strip.rs  sugar.rs  ttg.rs  undecorated.rs
yodel/src/grids/: generate.rs  mod.rs  tests.rs
yodel/src/inference/: debug.rs  exact.rs  importance_weighting.rs  iters.rs  mod.rs  wmc.rs
yodel/src/parser/: exact.rs  function.rs  mod.rs  program.rs  sampling.rs  shared.rs
yodel/src/tests/: checks.rs  freevars.rs  grids.rs  ite.rs  mls.rs  mod.rs  properties.rs  sample.rs  tuples.rs
yodel/src/utils/: mod.rs  render.rs
(+464 files in other folders)
