[workspace]
members = [
  "yodel",
  "formula",
  "tree-sitter-yodel",
  "tree-sitter-formula",
  "lean", # this is just for prototyping and shouldn't be considered a member of this project.
  "rsgm_networks",
  "ttg",
]
[workspace.package]
version = "0.0.0"
edition = "2021"

# start with the release profile (which cannot be inherited for dev), as
# documented in: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 3
debug = true            # +++ provide debug information
# split-debuginfo = '...' # listed as part of the dev profile, but fails on osx
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true      # ++ save more compile-time information to disk for faster rebuilds
codegen-units = 16
rpath = false

[profile.release]
lto = true              # +++ whole-program optimization: true for a "fat" LTO program, "thin" for a less aggressive form

[workspace.dependencies]
# rsdd = { path = "../rsdd" , features =["hypergraph"]}
rsdd = { git = "https://github.com/stites/rsdd", branch = "yodel-additions", features =["hypergraph"]}
rsgm = { git = "https://github.com/neuppl/rsgm" }
rand = "0.8.5"
itertools = "0.10.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.4"
tree-sitter = "0.20.9"
