[workspace]
resolver = "2"
members = [
  "multippl",
  "tree-sitter-multippl",
  "ttg",
]
[workspace.package]
name = "multippl-workspace"
version = "0.0.0"
edition = "2021"

# start with the release profile (which cannot be inherited for dev), as
# documented in: https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 3
debug = true            # +++ provide debug information
# split-debuginfo = '...' # listed as part of the dev profile, but fails on osx
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true      # ++ save more compile-time information to disk for faster rebuilds
codegen-units = 16
rpath = false

[profile.release]
lto = true              # +++ whole-program optimization: true for a "fat" LTO program, "thin" for a less aggressive form

[workspace.dependencies]
# rsdd = { path = "../rsdd" , features =["hypergraph"]}
rsdd = { git = "https://github.com/stites/rsdd", branch = "yodel-additions", features =["hypergraph"] }
rand = "0.8.5"
itertools = "0.10.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.4"
tree-sitter = "0.20.9"
rustc-hash = "1.1.0"
