[package]
name = "weight4me"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "data_flow"
harness = false

[[bench]]
name = "grids"
harness = false

[dependencies]
rand = "0.8.5"
nalgebra = "0.30.1"
itertools = "0.10.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.4"

rsdd = { path = "../rsdd" }
tree-sitter = "0.20.9"
tree-sitter-weight4me = { path = "../tree-sitter" }
rayon = "1.6.1"

#[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
num-traits = "0.2.15"

[dev-dependencies]
criterion = "0.4"
formula = { path = "../formula" }
