[package]
name = "yodel"
version = "0.1.0"
edition = "2021"

# [[bench]]
# name = "grids"
# harness = false
# required-features = ["criterion"]

# [[bench]]
# name = "data_flow"
# harness = false
# required-features = ["criterion"]

# [[bin]]
# name = "plot-grids"
# path = "src/plot/grids.rs"
# required-features = ["plotters"]

[dependencies]
rsdd = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-yodel = { path = "../tree-sitter" }

num-traits = "0.2"

plotters = { version = "0.3.4", optional = true }
criterion = { version = "0.4", optional = true }

[dev-dependencies]
formula = { path = "../formula" }
quickcheck = "1"
quickcheck_macros = "1"
