[package]
name = "yodel"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "grids"
harness = false
required-features = ["criterion"]

[[bin]]
name = "plot-grids"
path = "plots/grids/mod.rs"
required-features = ["plots"]

[dependencies]
rsdd = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-yodel = { path = "../tree-sitter" }

# depends on rustc-serialize v0.3.24 which will be deprecated
num-traits = "0.2"

plotters = { version = "0.3.4", optional = true }
criterion = { version = "0.4", optional = true }
csv = { version = "1.2.1", optional = true }
spinoff = { version = "0.7.0", optional = true }
rayon = { version = "1.7.0", optional = true }
serde = { version = "1.0.154", optional = true, features = ["derive", "serde_derive"] }
clap = { version = "4.1.8", optional = true }
either = "1.8.1"

[dev-dependencies]
formula = { path = "../formula" }
quickcheck = "1"
quickcheck_macros = "1"

[features]
plots = ["dep:plotters", "dep:csv", "dep:spinoff", "dep:rayon", "dep:serde", "dep:clap"]
