[package]
name = "formula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsdd = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
tree-sitter = { workspace = true }

tree-sitter-formula = { path = "../tree-sitter-formula" }
clap = { version = "4.1.8", features = ["derive"] }