cabal-version:      3.4
name:               yodel
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Sam Stites
maintainer:         stites@users.noreply.github.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , foldl
      , free
      , integration
      , math-functions
      , monad-loops
      , random-fu
      , recursion-schemes
    hs-source-dirs:   src
    default-language: GHC2021
