cabal-version:   3.4
name:            yodel
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Sam Stites
maintainer:      stites@users.noreply.github.com

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

common dependencies
  build-depends:
    , base                  ^>=4.16.0.0
    , base-unicode-symbols
    , foldl
    , free
    , ghc
    , integration
    , math-functions
    , monad-loops
    , mtl
    , mwc-probability
    , mwc-random
    , primitive
    , random-fu
    , recursion-schemes
    , unordered-containers

library
  import:             warnings, dependencies
  exposed-modules:
    Control.Monad.Meas
    Control.Monad.Weighted
    Grammar.Exact
    Grammar.Sample
    MLS

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    GADTs
    UnicodeSyntax

executable exact
  import:           warnings, dependencies
  main-is:          Exact.hs
  build-depends:    yodel
  hs-source-dirs:   exe
  default-language: GHC2021
