[package]
name = "tree-sitter-weight4me"
description = "BDDIS grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "BDDIS"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/stites/weight-for-me"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
