[package]
name = "yodel"
version = "0.1.0"
edition = "2021"

# [[bench]]
# name = "grids"
# harness = false
# required-features = ["criterion"]

[[bin]]
name = "plot-grids"
path = "exe/plots/grids/mod.rs"
required-features = ["plots"]

[[bin]]
name = "plot-bns"
path = "exe/plots/bns/mod.rs"
required-features = ["plots"]

[dependencies]
rsdd = { workspace = true }
rsgm = { workspace = true }
rsgm_networks = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-yodel = { path = "../tree-sitter-yodel" }
ttg = { path = "../ttg" }
indexmap = "1.9.3"

# depends on rustc-serialize v0.3.24 which will be deprecated
num-traits = "0.2"

plotters = { version = "0.3.4", optional = true }
criterion = { version = "0.4", optional = true }
csv = { version = "1.2.1", optional = true }
spinoff = { version = "0.7.0", optional = true }
rayon = { version = "1.7.0", optional = true }
serde = { version = "1.0.154", optional = true, features = ["derive", "serde_derive"] }
clap = "4.1.8"
statrs = "0.16.0"
nalgebra = "0.29.0"
paste = "1.0.12"

test-log = { version = "0.2.12", features = ["trace"] }
clap-verbosity-flag = "2.0.1"
serde_json = "1.0.108"
quickcheck = "1"
quickcheck_macros = "1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
plots = ["dep:plotters", "dep:csv", "dep:spinoff", "dep:rayon", "dep:serde"]
long_tests = []
debug_samples = []
